feat: 整理unicode与js关系

--- a/JavaScript/词法&类型/readme
+++ b/JavaScript/词法&类型/readme
@@ -3,13 +3,28 @@ JavaScript
 Lexical Grammar
     
 1. SourceCharater   Unicode
-    Unicode是一个字符集，每一种字符集都存在码点的概念，每一个字符都会对应到一个正整数上，比如A: 41, a: 61。ASCII字符集是一种比较早期的字符集，一共是128个，基本上所有字符集都会兼容ASCII，同样Unicode字符集也兼容了ASCII。其中U+0000-U+007F（128）就是ASCII字符集 
+    Unicode是一个字符集，通过码点将每一个字符映射到一个正整数上，比如A: 41, a: 61。ASCII字符集是一种比较早期的字符集，一共是128个，基本上所有字符集都会兼容ASCII，同样Unicode字符集也兼容了ASCII。其中U+0000-U+007F（128）就是ASCII字符集 
 
     U+000A LF
     U+0020 SPACE
     CJK Unified Ideographs 中日韩的字符范围 （U+4E00 - U+9FFF）
 
-    BMP 是指超出4位字符表示的Unicode 分割线是 U+FFFF前后，在U+FFFF之前（包括U+FFFF）的Unicode都是可以用4位字符表示的，而超出了 Specails（U+FFF0 - U+FFFF） 就是BMP
+    Unicode标号规范
+     2^16一个号码组成一个plain
+     目前一共17个平面，空间大小是 2^21
+     1个基本平面 BMP：U+0000～U+FFFF
+     16个辅助平面 SMP：U+010000～U+10FFFF
+
+    BMP 是指不超出4位字符表示的Unicode 分割线是 U+FFFF前后，在U+FFFF之前（包括U+FFFF）的Unicode都是可以用4位字符表示的，而超出了 Specails（U+FFF0 - U+FFFF） 就是SMP
+
+    最后说JavaScript使用的编码类型是什么？
+
+    JavaScript使用的编码类型是UCS-2。在JavaScript诞生的时候采用了UCS-2这种编码方式，UCS-2是一种支持16位的编码。之后UTF-16替代了UCS-2，也就是UCS-2被归到了UTF-16中。所以JavaScript使用的编码方式是UTF-16但并不是全部支持。所以造成JavaScript的所有字符都是2个字节的，如果是4字节的字符就会被当作两个双字节的字符。
+    因为UTF-16是由D800-DFFF这个范围的字节重新匹配的，所以造成了一下的问题
+        1. 一个超过两个字节的字符 无法正确的匹配自己的UTF-16编码
+        2. 不能通过 charAt(0) 匹配出第一个字符 （因为基本平面的映射的码点都没有具体含义都是空字符串）
+        3. 通过 charCodeAt(0) 匹配的码点是 映射的码点
+        4. 想获得全等的匹配 只能是 字符 匹配 两个映射码点
 
     JavaScript 中的字符串方法  String.fromCharCode() 只能处理4位字符的Unicode 
 
@@ -28,7 +43,6 @@ Lexical Grammar
 
     相关网站
     FileFormat.info(https://www.fileformat.info/info/unicode/)
-
 
 ---------------------------------------------------------------------------------------
 
@@ -104,7 +118,28 @@ Lexical Grammar
         Symbel
         Object
 
-
 ---------------------------------------------------------------------------------------
 
-    
+3. unicode
+    1. ASCII 是最早期用来储存英文字母的字符集，每一个二进制的由0和1两种状态构成，八个二进制表示一个字节，可以有256中不同的状态。ASCII码规定，一个字节的第一位默认由0表示，其余后7位由正常的二进制表示。一次ASCII码一共由128个字符组成。
+    2. Unicode 是世界上最大的字符集，Unicode诞生的目的就是创建一个可以囊括世界上所有字符的字符集，保证编码的统一防止乱码的情况。所有的字符都可以通过码点将每一个字符匹配一个正整数。但是问题是Unicode只规定了符号是二进制的代码，但是并没有规定二进制代码的储存方式。一个汉字对应的16进制的Unicode，转换成二进制数可能需要3-5个字节表示。如果所有的unicode 都按照最大的字符的字节数来表示那么除了有效的二进制的位数之外，其余所有的位置都需要填0，这样极大的浪费了储存空间。因此，Unicode出现了多种储存方式
+    3. UTF-8 就是unicode一种实现方式。
+       1. UTF-8最大的特点是一个可编程的编码方式，可以使用1-4个字节表示一个字符，根据不同的符号而改变字节的长度
+       2. UTF-8的表示规则
+        （1）单个字节的符号，字节的第一位设为0，后面7位为这个符号的Unicode码。此时的表达当时与ASCII相同
+        （2）对于n字节的符号（n > 1），第一个字节的前n为都设为1，第n+1设为0，后面字节的前两位一律设为10，剩下的没有提及的二进制位，全部位这个符号的Unicode码
+    ```
+     1. 如果是一个字节 那么就是ASCII的表达方式
+     2. 如果是多个字节，可以从第一个字节的1的个数判断当前的字符占用了几个字节
+    ```
+        注：16进制的unicode 与通过 UTF-8编码后的16进制是不同
+    4. FE FF 对于多字节的Unicode有两种表达方式，一种是大数在前（FEFF），另一种是小数在前（FFFE）
+
+    5. UTF16 是Unicode的另外一种实现方式，结合了UTF-8以及UTF-32的编码特征，即存在特定的长度，又可以结合同步的场景增加字节长度。
+      UTF-16个规则非常简单，基本平面的字符占用两个字节，辅助平面的字符占用四个字节
+
+      问题是如何确定，前面两个字节是一个单独和字符还是和后面的两个字节合成一个字符
+      在基本平面内，从D800-DFFF是一个空段，不匹配任何字符。因此通过这个空段来匹配赋值平面的字符。
+      而辅助平面的字符共有2^10个，也就是说需要一个20位的2进制的空间。因此又将D800-DFFF这段分成两个部分，那么匹配到这两部分的字节就需要与后面的字节一起组合才能匹配成一个字符
+
+---------------------------------------------------------------------------------------
