feat:add number type

--- a/JavaScript/语句&对象/语句&对象.md
+++ b/JavaScript/语句&对象/语句&对象.md
@@ -44,13 +44,121 @@
   + IfStatement
   + SwitchStatement
   + IterationStatement
-  ```
-    while
-    do while
-    for
-    for in
-    for of
-  ```
   + WithStatment
   + LabelledStatment
   + TryStatement
+## Iteration
+  + while
+  ```
+    return throw
+
+    break continue
+  ```
+  + do while
+  + for
+  + for in
+  + for of
+    for of => Interator => Generator/Array
+
+  ### try catch
+  + `[[return]]`: return 
+  + `[[value]]`: --
+  + `[[target]]`: label
+  ```
+  try {
+
+  } catch() {
+
+  } finally {
+
+  }
+  ```
+  ```
+    try {
+      throw 1
+    } catch(e) {
+      let e; // 报错
+    }
+    catch(e) 不会产生作用域 与for() 不一样 catch(e){} 只有一个作用域
+  ```
+
+  ## Declaration
+  + FunctionDeclaration
+  + GeneratorDeclaration
+  + AsyncFucntionDeclaration
+  ```js
+    function sleep (d) {
+      return new Promise(resolve => setTimeout(resolve, d))
+    }
+    void async function () {
+      var i = 0
+      while(true) {
+        console.log(i++)
+        await sleep(1000)
+      }
+    }()
+  ```
+  + AsyncGeneratorDeclaration
+  + VariableStatement
+  + ClassDeclaration
+  + LexicalDeclaration
+
+  > 执行和预处理是两个不同的阶段，预处理的时候会处理声明的规范，运行时就会直接忽略声明的部分
+
+  ## 对象
+  + 封装、多态、继承 ？
+  ```
+    唯一：不重复 对象指针
+    状态：描述对象 成员变量
+    行为：改变状态 成员函数
+  ```
+  ```
+    封装：架构描述
+      封装、解耦、内聚、复用
+    继承：面向对象特性
+    多态（类多态、函数多态）：动态的程度
+      同一段代码会产生不同的行为
+  ```
+  ### Object——Class
+  
+  + Data Property
+  ```
+    [[value]]
+    wirtable
+    enumerable
+    configurable
+  ```
+  + Accessor Property
+  ```
+    get
+    set
+    enumerable
+    configurable
+  ```
+  ### Object API/Grammar
+  + . [] Object.defineProperty
+  + Object.create Object.setPrototypeOf Object.getPrototypeOf
+  + new class extends
+  + new function prototype
+
+  ### Function Object
+  ```
+    property prototype 对象
+    [[call]] 函数独有的
+    constructor
+  ```
+
+  ## question
+  + 除了 throw 语句还有别的语句可以产生 throw 的执行结果么
+    expressionStatement 过程；
+    函数内的error 会抛到函数 外面
+    运行时报错
+  + 作用域与上下文的区别
+    作用域（scope）：源代码的文本范围
+    上下文（context）：
+      客户端，javascript执行所需要的对象；运行端内存储存变量的范围
+  + 找出所有的特殊对象
+  + JavaScript | 表达式，类型准换
+    convertStringToNumber 以及函数 convertNumberToString
+  + JavaScript | 语句，对象
+    根据课上老师的示范，找出 JavaScript 标准里所有的对象，分析有哪些对象是我们无法实现出来的，这些对象都有哪些特性？写一篇文章，放在学习总结里。
