--- a/JavaScript/Reading/语言精粹/readme
+++ b/JavaScript/Reading/语言精粹/readme
@@ -45,3 +45,9 @@ console.log(customerCity); // “暗之城”
   x ||= y 只有x在隐式转换之后为false的时候 才赋值y
 
 -----------------------------------------------
+一空字符串为键名：
+obj = {
+  '': '空字符串'
+}
+
+-----------------------------------------------
