--- a/JavaScript/Reading/语言精粹/语法/声明.md
+++ b/JavaScript/Reading/语言精粹/语法/声明.md
@@ -1,4 +1,4 @@
-语法
+# 语法
 
 > 语言中的标识符一般分为两类，一类是用于命名语法、符号等抽象概念，另一类用于命名数据（的储存位置）。前者被称为“语法关键字”，后者被称为“变量”和“常量”。
 以上内容引用自`语言精髓`语法部分的“语法综述”中对于“标识符”的定义。简单来说就是将标识符分成了：变量、常量和关键字两部分。在高程4里明确标注了“关键字、保留字、true、false和null都不算是标识符”，在权威指南中写到：标识符就是一个名字，可以对变量、函数进行命名，也可以自以为某些循环语句跳转位置的标记。并提到javascript将部分标识符拿出来作为自己的关键字。在最新的标准中标识符的确和保留字分开了：
@@ -8,9 +8,9 @@
 ```
 不管怎么说可以确定的是：标识符的作用是绑定了变量与值得位置关系，关键字的作用是在特定的语法环境下的特殊功能。
 
-声明：
+## 声明：
   变量声明决定了三个方面，“值，作用域，可写行”（可写行主要是由声明阶段 返回的IsConstantDeclaration是不是true，当通过const 声明的时候返回true）。
-let&const
+### let&const
 + 声明：
   1. 变量创建阶段绑定“环境记录”，记录声明的环境，包括块级作用域、函数作用域、try catch的catch作用域。只有在变量完成的词法的绑定之后，该访问变量才能被访问（就是为变量初始化的过程）
   2. 变量的定义，如果为变量进行了初始化的赋值，那么直接完成赋值操作。如果没有为变量初始化，那么自动初始化为undefined
@@ -24,4 +24,17 @@ let&const
   1. 为常量赋值的时候没有初始化
 ```
 
-var声明：
+### var：
+
+## ECMAScript的类型和JavaScript的类型
+ECMA中定义了两种类型：语言类型和规范类型，规范类型是用来描述ECMA语言构成以及语言类型的，与JavaScript的七种类型毫不相干，而ECMA的语言类型与JavaScript的语言类型也不是完全相同的。在ECMA中使用开头大写的方式表示语言类型，Undefined、Null、Boolean、String、Symbol、Number、Object。
+
+## 问题：
+  + 模版字符串的类型
+```
+  foo = tlp => console.log(typeof tlp, tlp instanceof Array, ref=tlp)
+  // ref ?
+```
+  + String.raw
+  + 模版函数
+  + class 与 function的区别，使用function实现class
