feat: 语句-函数声明

--- a/JavaScript/Reading/语言精粹/readme
+++ b/JavaScript/Reading/语言精粹/readme
@@ -51,3 +51,13 @@ obj = {
 }
 
 -----------------------------------------------
+使用 \u{} 声明变量
+var \u{65} = '123'
+\u{65} // 123
+e // 123
+
+但是不能使用字符与\u{}混合的方式声明
+
+var els\u{65} //
+
+-----------------------------------------------
