--- a/JavaScript/Reading/语言精粹/语法/声明.md
+++ b/JavaScript/Reading/语言精粹/语法/声明.md
@@ -9,7 +9,20 @@
 不管怎么说可以确定的是：标识符的作用是绑定了变量与值得位置关系，关键字的作用是在特定的语法环境下的特殊功能。
 
 ## 声明：
-  变量声明决定了三个方面，“值，作用域，可写行”（可写行主要是由声明阶段 返回的IsConstantDeclaration是不是true，当通过const 声明的时候返回true）。
+  变量声明决定了三个方面，“值，作用域，可写性”（可写性主要是由声明阶段决定的，如果返回的IsConstantDeclaration是true，说明当前的变量不可写。当通过const 声明的时候返回true）。
+
+### 从哪几个方面来讲声明呢
+ + 声明方式
+  - 块级声明和var声明
+  - 赋值模版声明
+ + 值得类型
+  - 字符串字面量、转义符
+  - 模版字面量
+  - 数字字面量
+ + 其他声明
+  - 常量声明
+  - 符号声明
+  - 函数声明
 ### let&const
 + 声明：
   1. 变量创建阶段绑定“环境记录”，记录声明的环境，包括块级作用域、函数作用域、try catch的catch作用域。只有在变量完成的词法的绑定之后，该访问变量才能被访问（就是为变量初始化的过程）
