--- a/JavaScript/Reading/语言精粹/语法/表达式.md
+++ b/JavaScript/Reading/语言精粹/语法/表达式.md
@@ -1,1 +1,116 @@
-位运算：
+# 表达式运算
+1. 一个表达式总有结果值：引用类型、值类型、undefined
+2. 一个表达可以是单值表达式，除此之外的表达式至少存在一个操作符。操作符必须跟随操作数，独立与操作数单独存在的表达式是不合法的
+3. 复合表达式由多个独立表达式组成，每个独立表达式的结果值可以作为“临近”操作符的操作数
+4. 表达式存在优先级
+## 运算符表达式
+### 单词运算符
+```
+  typeof 
+  delete
+  void
+  new
+  in
+  instance of
+  yield
+  await
+```
+### 操作符
++ 自增/自减
+  1. 使用自增/自减的操作符，变量的值会在下一次的计算之前改变，这种情况也被称为“副作用”
+  2. 可以作用与任何类型的值，包括：字符串、对象、布尔值。先通过隐式转换转成数字，在进一步取值
++ 一元操作符
+  如果使用在非数字上面，与调用Number方法一样
++ 位运算
+```
+http://www.matrix67.com/blog/archives/263
+http://www.matrix67.com/blog/archives/264
+http://www.matrix67.com/blog/archives/266
+http://www.matrix67.com/blog/archives/268
+leetcode:
+https://leetcode-cn.com/tag/bit-manipulation/
+```
+
+## 单值表达式
+```
+1. this, new.target, arguments, super
+2. 变量
+3. 字面量
+```
+## 按照结果为表达式分类
+### 一般表达式
+只操作三种类型数据：数值、布尔值、字符串，且结果值是相同类型
+  + 逻辑运算
+    ! && ||
+  + 字符串运算
+    +
+  + 数值运算
+### 比较运算
+  + 等值检测
+    == != === !==
+```
+== != 基础类型：
+  数字：把另一个转成数字
+  布尔值：自身转成数字
+  对象：1. valueOf 2. toString
+```
+在等值比较中JavaScript尽可能使用数字来进行比较，在js中字符串的比较开销相对于数字要高了不少，因为字符串要逐个比较是否相同，最后的得出结果（还要拿到当前字符的码点）
+
+### 序列检测
+number的几个边界值
+1. Number.NEGATIVE_INFINITY 负无穷大
+2. Number.POSITIVE_INFINITY 整无穷大
+3. Number.MAX_SAFE_INTEGER 最大安全整数
+4. Number.MIN_SAFE_INTEGER 最小安全整熟
+5. NaN不再以上序列中
+6. 比较两个值类型总会返回false，其他类型转化成相同类型在进行比较
+
+## 赋值运算表达式
+  **赋值的效果是修改存储单元中的值**，这是赋值操作的本质，这个修改“储存单元”的行为叫做“绑定”
+
+### 函数表达式
+```js
+function func_1() {}
+var func_2 = function() {}
+var func_3 = () => {}
+var func_4 = new Function('')
+```
+函数的隐式调用：
+  1. 函数作为读取器时，属性存取操作的时候隐式调用
+  2. 函数使用bind方法将源函数绑定为目标函数时，隐式调用源函数
+  3. 使用Proxy() 创建源函数的代理对象，调用代理对象隐式调用该函数
+  4. 使用new运算隐式调用
+  5. 给函数赋给对象的符号属性（Symbol.hasInstance, Symbol.Iterator）,并在对象相应行为触发时调用该函数
+  ### new 运算符
+  ```
+  functionReference()
+  ```
+  通常`()`是作为函数调用运算符来使用的，但是在使用`new`运算符调用的时候`()`并不是函数调用运算符，而是为了构造函数传参使用的。此时的函数调用是通过`new`运算符完成
+
+  ## 特殊作用运算符
+  ### typeof
+  1. typeof是一个运算符而不是一个关键字 (?关键字就是由特殊用特的表示符，typeof获取了变量的类型信息，就是这个关键字的用途，为什么说是一个运算符呢)
+  ```js
+    var N = 13
+    console.log(N * 2)
+  ```
+  变量在参与运算的时候是以其值参与运算的，在`N * 2`中N的以13参与运算的
+  ```js
+  console.log(typeof N)
+  ```
+  而在`typeof`参与运算的时候获取的是类型信息
+`typeof` 在判断var声明和let&const声明的时候出现了不一致的表现，`typeof`检测var声明的变量时不要考虑调用的位置
+```js
+
+console.log(typeof nnn) // undefined
+console.log(typeof a) // number
+var a = 1
+```
+而在检测let&const声明的变量是会直接报错
+```js
+console.log(typeof b) // b is not define
+let b = 0
+```
+
+
+
