--- a/JavaScript/Reading/语言精粹/语法/语句.md
+++ b/JavaScript/Reading/语言精粹/语法/语句.md
@@ -83,4 +83,29 @@ function a(){};(1, 2) // 2
 
 ```
 ## 变量声明语句
+变量声明有三种方式：var、let、const。其中var和let可只执行声明语句（如果没有赋值语句，则会为变量initialized一个undefined），而const声明必须为变量再执行一次赋值语句，作为初始化的值。
+除此之前还有具名函数的声明，以及异常捕获时在catch分支中的变量，都属于显示声明
+## 分支语句
+### if语句
+>if 语句的语法: if statement else statement. 也就是说在解析if语句的时候 只解析if后面紧跟着的语句
+```js
+var num = 0
+if (num) num++; console.log(num); // 0 
 
+```
+上面的例子虽然 if 后面接着的语句是在同一行，但是却被分成两个部分，第一个部分是`num++` 是if语句满足condition条件时候触发的statement，而后面的`console.log(num)`则完全和上面的if语句无关，也就是可以解析为下面的形式
+```js
+var num = 0
+if (num) num++;
+console.log(num);
+```
+或者
+```js
+var num = 0
+if (num) {
+  num++
+}
+console.log(num)
+```
+
+### switch语句
